--- a/style.css
+++ b/style.css
@@ -289,110 +289,6 @@ nav.menu.active ul li {
 }
 }
 
-
-#seccion1 {
-    height: fit-content;
-    width: 100%;
-    background: transparent;
-    position:relative;
-}
-
-#seccion1 .primary-text {
-    position:absolute;
-    display: flex;
-    justify-content: center;
-    bottom: 0px;
-    width: 100%;
-    padding: 0 60px 35px 60px;
-    box-sizing: border-box;
-}
-
-#seccion1 .text1-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    left: 100%;
-    gap:35px;
-    width: 917px;
-}
-
-#seccion1 .title1{
-    color:white;
-    max-width: 600px;
-    height: fit-content;
-    padding:0;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-#seccion1 .img1{
-    height: 100%;
-    width: 100%;
-    background-color:#E87817 ;
-}
-
-#seccion1 .complement{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    gap: 30px;
-}
-
-#seccion1 .text-complement{
-    display: flex;
-    flex-direction: column;
-    width: 600px;
-    gap:30px;
-
-}
-
-#seccion1 .text1, #seccion1 .text2{
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    padding: 30px;
-    gap: 8px;
-}
-
-#seccion1  .placeholder{
-    height: 620px;
-    width: 100%;
-    background-color:#0094DE ;
-}
-#seccion1  .background{
-    height: 480px;
-    width: 100%;
-    background-color: #DEDEDE;
-}
-
-@media (max-width:760px) {
-
-    #seccion1 .complement{
-        flex-wrap: wrap;
-    }
-    #seccion1  .background{
-    height: 660px;
-    }
-    #seccion1 .text1-container{
-    height: fit-content;
-    }
-    #seccion1 .img1{
-    height: 300px;
-    width: 500px ;
-    }
-    #seccion1 .text-complement{
-    align-items: center;
-}
-    #seccion1 .text1, #seccion1 .text2{
-    width: 500px;
-    box-sizing: border-box;
-}
-}
-
 #seccion2 {
     box-sizing: border-box;
     padding: 40px;
@@ -1116,7 +1012,8 @@ nav.menu.active ul li {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    width: 550px;
+    max-width: 550px;
+    width: 100%;
 }
 #seccion13 input{
     border-radius: 10px;
@@ -1184,12 +1081,28 @@ nav.menu.active ul li {
 }
 
 @media (max-width: 1335px){
+#seccion13{
+    padding:100px 30px;;
+}
 #seccion13 aside{
-    width: 550px;
+    width: 100%;
 }
 #seccion13 .form-card{
     justify-self: center;
+    max-width: 550px;
 }
+
+#seccion13 .flex {
+    max-width: 550px;
+}
+#seccion13 input.item {
+    flex: 0 0 100%;
+}
+#seccion13 .sub-title3{
+    max-width: 550px;
+    width: auto;
+}
+
 }
 
 #seccion13 .bold{
@@ -1288,7 +1201,3 @@ footer .footer address a {
     height: fit-content;
 }
 }
-
-
-
-
