--- a/style.css
+++ b/style.css
@@ -429,7 +429,8 @@ nav.menu.active ul li {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 30px 0;
+    padding: 30px 20px;
+    box-sizing: border-box;
 }
 
 #seccion5 p{
@@ -1203,3 +1204,4 @@ footer .footer address a {
     height: fit-content;
 }
 }
+
